--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "cesium": "^1.78.0",
     "gatsby": "^2.21.33",
     "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.3",
@@ -49,6 +50,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
+    "resium": "^1.13.1",
     "theme-ui": "^0.3.1"
   },
   "devDependencies": {
